--- a/scss/layouts/_footer.scss
+++ b/scss/layouts/_footer.scss
@@ -4,7 +4,26 @@
 footer {
   background-color: hsl(168, 44%, 68%);
   text-align: center;
+  padding-block: 4rem;
+  .footer-logo {
+    width: 10rem;
+  }
+  .footer-links {
+    padding-block: 2.5rem 5rem;
+  }
   a {
     color: $dark-moderate-cyan;
+    padding-inline: 1.75rem;
+    &:hover {
+      color: white;
+    }
+  }
+  .social-media {
+    a {
+      padding-inline: 0.85rem;
+    }
+    img:hover {
+      filter: brightness(100);
+    }
   }
 }
