--- a/scss/layouts/_header.scss
+++ b/scss/layouts/_header.scss
@@ -8,6 +8,9 @@ header {
   height: 100vh;
   padding: 2rem;
   text-align: center;
+  .header-logo {
+    width: 10rem;
+  }
 }
 
 .navbar {
@@ -35,4 +38,9 @@ li > a {
   color: $very-dark-desaturated-blue;
   padding: 1.375rem 2rem;
   border-radius: 2rem;
+  &:hover {
+    background-color: hsla(0, 0%, 100%, 0.3);
+    color: $white;
+    transition: ease-in-out 0.2s all;
+  }
 }
