--- a/scss/_globals.scss
+++ b/scss/_globals.scss
@@ -1,4 +1,5 @@
 @use "variables" as *;
+@use "mixins" as *;
 
 * {
   margin: 0;
@@ -22,8 +23,17 @@ body {
   }
 }
 
+.desktop-img {
+  @include small {
+    display: none;
+  }
+}
+
 .mobile-img {
   display: none;
+  @include small {
+    display: block;
+  }
 }
 
 .title {
@@ -38,21 +48,38 @@ body {
     color: $grayish-blue;
     letter-spacing: 0.5rem;
     margin-bottom: 5rem;
+    @include small {
+      font-size: $font-s;
+      letter-spacing: 0.2rem;
+      margin: 0;
+    }
   }
   &--fs-l {
     font-size: $font-l;
+    @include small {
+      margin-bottom: 2rem;
+    }
   }
   &--fs-xl {
     font-size: $font-xl;
     color: $very-dark-desaturated-blue;
     padding-right: 2.5rem;
     line-height: 2.75rem;
+    @include small {
+      font-size: $font-l;
+      padding-inline: 0;
+    }
   }
   &--fs-xxl {
     font-size: $font-xxl;
     color: $white;
     margin-block: 8rem 6rem;
     letter-spacing: 0.5rem;
+    @include small {
+      font-size: $font-xl;
+      line-height: 2.75rem;
+      margin-block: 5rem 3rem;
+    }
   }
   &--red {
     position: relative;
