--- a/scss/layouts/_header.scss
+++ b/scss/layouts/_header.scss
@@ -8,8 +8,11 @@ header {
   height: 100vh;
   padding: 2rem;
   text-align: center;
-  .header-logo {
-    width: 10rem;
+  @include small {
+    background-image: url(/images/mobile/image-header.jpg);
+    background-size: 100%;
+    height: 70vh;
+    padding: 1.5rem;
   }
 }
 
@@ -18,29 +21,44 @@ header {
   margin-top: 0.5rem;
 }
 
+.header-logo {
+  width: 10rem;
+  @include small {
+    width: 9rem;
+  }
+}
+
+.hamburger {
+  display: none;
+  @include small {
+    display: block;
+    width: 1.5rem;
+  }
+}
+
 nav {
   @include flex(row, center, center);
-}
-
-li {
-  font-size: $font-s;
-  list-style-type: none;
-  margin-inline: 1.5rem;
-}
-
-li > a {
-  color: white;
-}
-
-.contact {
-  font-family: $fraunces;
-  background-color: $white;
-  color: $very-dark-desaturated-blue;
-  padding: 1.375rem 2rem;
-  border-radius: 2rem;
-  &:hover {
-    background-color: hsla(0, 0%, 100%, 0.3);
-    color: $white;
-    transition: ease-in-out 0.2s all;
+  @include small {
+    display: none;
+  }
+  li {
+    font-size: $font-s;
+    list-style-type: none;
+    margin-inline: 1.5rem;
+    a {
+      color: white;
+    }
+  }
+  .contact {
+    font-family: $fraunces;
+    background-color: $white;
+    color: $very-dark-desaturated-blue;
+    padding: 1.375rem 2rem;
+    border-radius: 2rem;
+    &:hover {
+      background-color: hsla(0, 0%, 100%, 0.3);
+      color: $white;
+      transition: ease-in-out 0.2s all;
+    }
   }
 }
