--- a/scss/layouts/_header.scss
+++ b/scss/layouts/_header.scss
@@ -2,14 +2,14 @@
 @use "../variables" as *;
 
 header {
-  background-image: url("/images/desktop/image-header.jpg");
+  background-image: url("../images/desktop/image-header.jpg");
   background-size: cover;
   background-position: center;
   height: 100vh;
   padding: 2rem;
   text-align: center;
   @include small {
-    background-image: url(/images/mobile/image-header.jpg);
+    background-image: url(../images/mobile/image-header.jpg);
     background-size: 100%;
     height: 70vh;
     padding: 1.5rem;
