--- a/scss/layouts/_header.scss
+++ b/scss/layouts/_header.scss
@@ -29,7 +29,6 @@ header {
   }
   &:hover {
     cursor: pointer;
-    transform: rotate(180deg)
   }
 }
 
@@ -60,6 +59,8 @@ nav {
       background-color: hsla(0, 0%, 100%, 0.3);
       color: $white;
       transition: ease-in-out 0.2s all;
+      padding: 1.375rem 2rem;
+      border: 0;
     }
   }
 }
@@ -74,44 +75,43 @@ nav {
 
 #mob-nav {
   @include small {
-
-  display: none;
-  position: absolute;
-  inset: 0;
-  inset-inline: 1.5rem;
-  top: 7rem;
-  background-color: $white;
-  min-width: 20.5rem;
-  height: 20rem;
-
-  &::before {
-    content: "";
+    display: none;
     position: absolute;
-    top: -2rem;
-    right: 0;
-    width: 0;
-    height: 0;
-    border-top: 2rem solid transparent;
-    border-bottom: 2rem solid transparent;
-    border-right: 2rem solid $white;
-  }
+    inset: 0;
+    inset-inline: 1.5rem;
+    top: 7rem;
+    background-color: $white;
+    min-width: 20.5rem;
+    height: 20rem;
 
-  li {
-    margin-block: 2rem;
-  }
-
-  a {
-    color: $dark-grayish-blue;
-    font-size: $font-m;
-  }
-
-  .contact-button {
-    margin-top: 3rem;
-    a {
-      background-color: $yellow;
-      color: $very-dark-desaturated-blue;
+    &::before {
+      content: "";
+      position: absolute;
+      top: -2rem;
+      right: 0;
+      width: 0;
+      height: 0;
+      border-top: 2rem solid transparent;
+      border-bottom: 2rem solid transparent;
+      border-right: 2rem solid $white;
     }
-  }
+
+    li {
+      margin-block: 2rem;
+    }
+
+    a {
+      color: $dark-grayish-blue;
+      font-size: $font-m;
+    }
+
+    .contact-button {
+      margin-top: 3rem;
+      a {
+        background-color: $yellow;
+        color: $very-dark-desaturated-blue;
+      }
+    }
   }
 }
 
@@ -120,11 +120,19 @@ nav {
 }
 
 @-webkit-keyframes action {
-    0% { transform: translateY(0); }
-    100% { transform: translateY(-20px); }
+  0% {
+    transform: translateY(0);
+  }
+  100% {
+    transform: translateY(-20px);
+  }
 }
 
 @keyframes action {
-    0% { transform: translateY(0); }
-    100% { transform: translateY(-20px); }
+  0% {
+    transform: translateY(0);
+  }
+  100% {
+    transform: translateY(-20px);
+  }
 }
